<resources>
    <string name="app_name">MotelAnimal</string>

    <string name="check_in">Check-In</string>
    <string name="check_out">Check-Out</string>
    <string name="consultas">Consultas</string>
    <string name="tutores">Tutores</string>
    <string name="cotutores">Co-Tutores</string>
    <string name="pets">Pets</string>
    <string name="pet">Pet</string>
    <string name="relatorios">Relatórios</string>
    <string name="novo">Novo</string>
    <string name="editar">Editar</string>
    <string name="nome_completo">Nome completo</string>
    <string name="cpf">CPF</string>
    <string name="e_mail">E-mail</string>
    <string name="telefone">Telefone</string>
    <string name="cep">CEP</string>
    <string name="bairro">Bairro</string>
    <string name="endereco">Endereço</string>
    <string name="cidade">Cidade</string>
    <string name="complemento">Complemento</string>
    <string name="observacoes">Observações</string>
    <string name="nenhum_registro_encontrado">Nenhum Registro Encontrado</string>
    <string name="responsavel">Responsável</string>
    <string name="especie">Espécie</string>
    <string name="nome">Nome</string>
    <string name="carregar">Carregar</string>
    <string name="url_da_imagem">URL da Imagem</string>
    <string name="idade">Idade</string>
    <string name="raca">Raça</string>
    <string name="dieta">Dieta</string>
    <string name="comportamento">Comportamento</string>
    <string name="quarto">Quarto</string>
    <string name="quartos">Quartos</string>
    <string name="numero">Número</string>
    <string name="status">Status</string>
    <string name="relatorio">Relatório</string>
    <string name="titulo">Título</string>
</resources>