<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.circularreveal.CircularRevealLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="@color/system_background"
        tools:context=".ConsultasActivity">

    <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background_AppBarLayout">

        <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolBar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:navigationIcon="@drawable/baseline_arrow_back_24"
                app:navigationIconTint="@color/white"
                app:titleTextColor="@color/white"
                app:title="@string/consultas" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
            android:layout_marginTop="-56dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

        <com.google.android.material.button.MaterialButton
                android:id="@+id/btnTutores"
                android:layout_width="160dp"
                android:layout_height="50dp"
                app:icon="@drawable/baseline_people_24"
                android:text="@string/tutores" />

        <com.google.android.material.button.MaterialButton
                android:id="@+id/btnPets"
                android:layout_marginTop="25dp"
                android:layout_width="160dp"
                android:layout_height="50dp"
                app:icon="@drawable/baseline_pets_24"
                android:text="@string/pets" />

        <com.google.android.material.button.MaterialButton
                android:id="@+id/btnRelatorios"
                android:layout_marginTop="25dp"
                android:layout_width="160dp"
                android:layout_height="50dp"
                app:icon="@drawable/baseline_library_books_24"
                android:text="@string/relatorios" />

    </LinearLayout>

</com.google.android.material.circularreveal.CircularRevealLinearLayout>