<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.circularreveal.CircularRevealLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="@color/system_background"
        tools:context=".RelatorioActivity">

    <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolbar_heigth"
            android:background="@color/background_AppBarLayout">

        <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolBar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:navigationIcon="@drawable/baseline_arrow_back_24"
                app:navigationIconTint="@color/white"
                app:titleTextColor="@color/white"
                app:title="@string/novo">

            <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/toolBarSave"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:navigationIcon="@drawable/baseline_save_24"
                    app:navigationIconTint="@color/white"
                    android:layout_gravity="end" />

            <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/toolBarExcluir"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:navigationIcon="@drawable/baseline_delete_forever_24"
                    app:navigationIconTint="@color/white"
                    android:layout_gravity="end" />

        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:prefixText="@string/quarto"
            android:id="@+id/quartoLayout"
            style="@style/InputOutlinedBox">

        <Spinner
                android:id="@+id/quarto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/default_margin" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            app:counterMaxLength="256"
            android:id="@+id/tituloLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/InputOutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/titulo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/input_text_color"
                android:inputType="textCapWords|textAutoComplete"
                android:maxLength="256"
                android:maxLines="1"
                android:hint="@string/titulo" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/relatorioLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterMaxLength="1024"
            app:counterEnabled="true"
            style="@style/InputOutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/relatorio"
                android:hint="@string/relatorio"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/input_text_color"
                android:inputType="textAutoComplete"
                android:maxLength="1024" />

    </com.google.android.material.textfield.TextInputLayout>


</com.google.android.material.circularreveal.CircularRevealLinearLayout>