<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.circularreveal.CircularRevealLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="@color/system_background"
        tools:context=".PetActivity">

    <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolbar_heigth"
            android:background="@color/background_AppBarLayout">

        <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolBar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:navigationIcon="@drawable/baseline_arrow_back_24"
                app:navigationIconTint="@color/white"
                app:titleTextColor="@color/white"
                app:title="@string/novo">

            <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/toolBarSave"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:navigationIcon="@drawable/baseline_save_24"
                    app:navigationIconTint="@color/white"
                    android:layout_gravity="end" />

            <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/toolBarExcluir"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:navigationIcon="@drawable/baseline_delete_forever_24"
                    app:navigationIconTint="@color/white"
                    android:layout_gravity="end" />

        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <ImageView
                    android:id="@+id/foto"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:src="@drawable/baseline_image_search_24"
                    tools:ignore="ContentDescription" />

            <com.google.android.material.textfield.TextInputLayout
                    app:counterMaxLength="256"
                    android:id="@+id/nomeLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/InputOutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/nome"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColor="@color/input_text_color"
                        android:inputType="textCapWords|textAutoComplete"
                        android:maxLength="256"
                        android:maxLines="1"
                        android:hint="@string/nome" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_margin="@dimen/default_margin"
                    android:baselineAligned="false">

                <com.google.android.material.textfield.TextInputLayout
                        android:layout_weight="0.5"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        app:prefixText="@string/especie"
                        style="@style/InputOutlinedBox">

                    <Spinner
                            android:id="@+id/especie"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="@dimen/default_margin" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                        app:counterMaxLength="2"
                        android:id="@+id/idadeLayout"
                        android:layout_weight="0.5"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        style="@style/InputOutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/idade"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textColor="@color/input_text_color"
                            android:inputType="number"
                            android:maxLength="2"
                            android:hint="@string/idade" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                    app:counterMaxLength="256"
                    android:id="@+id/racaLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    style="@style/InputOutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/raca"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColor="@color/input_text_color"
                        android:inputType="text|textAutoComplete"
                        android:maxLength="256"
                        android:hint="@string/raca" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    app:counterMaxLength="256"
                    android:id="@+id/tutorLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:prefixText="Tutor"
                    style="@style/InputOutlinedBox">

                <Spinner
                        android:id="@+id/tutor"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                    android:id="@+id/btnCotutores"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/default_margin"
                    android:text="[0] Co-Tutores"
                    tools:ignore="HardcodedText" />

            <com.google.android.material.textfield.TextInputLayout
                    app:counterMaxLength="256"
                    android:id="@+id/dietaLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:counterEnabled="true"
                    style="@style/InputOutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/dieta"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColor="@color/input_text_color"
                        android:inputType="text|textAutoComplete"
                        android:maxLength="256"
                        android:hint="@string/dieta" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    app:counterMaxLength="256"
                    android:id="@+id/comportamentoLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:counterEnabled="true"
                    style="@style/InputOutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/comportamento"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColor="@color/input_text_color"
                        android:inputType="text|textAutoComplete"
                        android:maxLength="256"
                        android:hint="@string/comportamento" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    app:counterMaxLength="256"
                    android:id="@+id/observacoesLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:counterEnabled="true"
                    style="@style/InputOutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/observacoes"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColor="@color/input_text_color"
                        android:inputType="text|textAutoComplete"
                        android:maxLength="256"
                        android:hint="@string/observacoes" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </ScrollView>

</com.google.android.material.circularreveal.CircularRevealLinearLayout>